# hbp-validation-client

./: .gitignore  .gitignore~  .readthedocs.yaml  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  README.rst  codemeta.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ebrains.yml
docs/: Makefile  authors.json  build_codemeta.py  conf.py  index.rst  make.bat  reference.rst  requirements.txt
ebrains_validation_framework/: __init__.py  datastores.py  sample.py  utils.py
ebrains_validation_framework/jsonTreeViewer/: document.json  index.htm  jsonTreeViewer.js
hbp_validation_framework/: __init__.py  __init__.py~  datastores.py  sample.py  utils.py  versioning.py
hbp_validation_framework/docs/: conf.py  conf.py~
hbp_validation_framework/docs/_build/doctrees/: environment.pickle  example.doctree  index.doctree
hbp_validation_framework/docs/_build/html/: .buildinfo  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
hbp_validation_framework/jsonTreeViewer/: data.js
hbp_validation_framework/templates/: report_template.html
on/: .. automodule:: hbp_validation_framework.rst  Makefile  conf.py  make.bat
tests/: HBP_VF_Report_20200713-190855.html  HBP_VF_Report_20200713-200058.html  conftest.py  install.sh  test_model_images.py  test_model_instances.py  test_models.py  test_results.py  test_superuser.py  test_test_instances.py  test_tests.py  test_utilities.py
tests/hbp_validation_framework/0f0e2239-f4df-4be8-a080-8ea883243d4c/20200713-190906/: test.txt  test_config.json
(+10 files in other folders)
